Fix product images overlapping header by adding z-index to header

--- a/checkout.html
+++ b/checkout.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/pages/checkout/checkout-header.css">
     <link rel="stylesheet" href="styles/pages/checkout/checkout.css">
-    
+    <link rel="stylesheet" href="styles/shared/amazon-footer.css">
 
   </head>
   <body>
     <div class="checkout-header">
       <div class="header-content">
         <div class="checkout-header-left-section">
-          <a href="/">
+          <a href="index.html">
             <img class="amazon-logo" src="images/amazon-logo.png">
             <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
           </a>
@@ -32,7 +32,7 @@
 
         <div class="checkout-header-middle-section">
           Checkout (<a class="return-to-home-link js-chekout-quantity"
-            href="/"></a>)
+            href="index.html"></a>)
         </div>
 
         <div class="checkout-header-right-section">
@@ -54,6 +54,9 @@
       </div>
     </div>
     
+    <footer class="site-footer">
+      © 2026 priyanshu pandey. This project is for practice purposes only and is not affiliated with Amazon.
+    </footer>
     <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
