--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
     <link rel="stylesheet" href="styles/pages/amazon.css">
-    
+    <link rel="stylesheet" href="styles/shared/amazon-footer.css">
 
   </head>
 
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="/" class="header-link">
+        <a href="index.html" class="header-link">
           <img class="amazon-logo"
             src="images/amazon-logo-white.png">
           <img class="amazon-mobile-logo"
@@ -58,6 +58,9 @@
       <div class="products-grid js-product-grid">
       </div>
     </div>
+    <footer class="site-footer">
+      © 2026 priyanshu pandey. This project is for practice purposes only and is not affiliated with Amazon.
+    </footer>
     <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
