--- a/orders.html
+++ b/orders.html
@@ -13,17 +13,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    
-
     <!-- Here are the CSS files for this page. -->
     <link rel="stylesheet" href="styles/shared/general.css">
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
     <link rel="stylesheet" href="styles/pages/orders.css">
+    <link rel="stylesheet" href="styles/shared/amazon-footer.css">
   </head>
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="/" class="header-link">
+        <a href="index.html" class="header-link">
           <img class="amazon-logo"
             src="images/amazon-logo-white.png">
           <img class="amazon-mobile-logo"
@@ -61,6 +60,9 @@
       </div>
     </div>
 
+    <footer class="site-footer">
+      © 2026 priyanshu pandey. This project is for practice purposes only and is not affiliated with Amazon.
+    </footer>
     <script type="module" src="data/orders.js"></script>
   </body>
 </html>
